@@ -1,5 +1,6 @@
 package com.bytearchitect.service.impl;
 
+import com.bytearchitect.dto.PagedResponse;
 import com.bytearchitect.dto.TopicDTO;
 import com.bytearchitect.exception.DuplicateResourceException;
 import com.bytearchitect.exception.ResourceNotFoundException;
@@ -8,6 +9,8 @@ import com.bytearchitect.repository.TopicRepository;
 import com.bytearchitect.service.TopicService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -26,10 +29,19 @@ public class TopicServiceImpl implements TopicService {
 
 
     @Override
-    public List<TopicDTO> getAllTopics() {
-        return topicRepository.findAll().stream()
-                .map(topic-> modelMapper.map(topic, TopicDTO.class))
-                .collect(Collectors.toList());
+    public PagedResponse<TopicDTO> getAllTopics(Pageable pageable) {
+        Page<Topic> topicPage = topicRepository.findAll(pageable);
+        List<TopicDTO> topicDTOs = topicPage.stream()
+                .map(topic -> modelMapper.map(topic, TopicDTO.class))
+                .toList();
+        return new PagedResponse<>(
+                topicDTOs,
+                topicPage.getNumber(),
+                topicPage.getSize(),
+                topicPage.getTotalElements(),
+                topicPage.getTotalPages(),
+                topicPage.isLast()
+        );
     }
 
     @Override
@@ -59,5 +71,28 @@ public class TopicServiceImpl implements TopicService {
     @Override
     public void deleteTopic(int id) {
         topicRepository.deleteById(String.valueOf(id));
+    }
+
+    @Override
+    public void addTopics(List<TopicDTO> topicDTOList) {
+        StringBuilder errorMessage = new StringBuilder();
+        /*for(TopicDTO topicdto : topicDTOList){
+            if (topicRepository.existsById(String.valueOf(topicdto.getId()))) {
+                errorMessage.append("Topic with ID " + topicdto.getId() + " already exists");
+            }
+            Topic topic = modelMapper.map(topicdto,Topic.class);
+            topicRepository.save(topic);
+            topicRepository.saveAll(topicDTOList.stream()
+                    .map(dto-> modelMapper.map(dto,Topic.class))
+                    .collect(Collectors.toList())
+            );
+        }*/
+        topicRepository.saveAll(topicDTOList.stream()
+                .map(dto-> modelMapper.map(dto,Topic.class))
+                .collect(Collectors.toList())
+        );
+        if(errorMessage.length() > 0){
+            throw new DuplicateResourceException(errorMessage.toString());
+        }
     }
 }
